# MMTPy

./: .gitignore  .pre-commit-config.yaml  .sourcery.yaml  LICENSE  README.md  __optimize_model_metabolomics.ipynb  cobra_utils.py  convert_names_to_vmh.py  mmtpy_opt_workflows.py  mmtpy_utils.py  mmtpy_workflows.py  optimize_model.py  optimize_model_mbx.py  optimize_model_mbx_constrained.ipynb  optimize_model_metabolome.py  optimize_model_metabolomics.py  optimize_model_metabolomics_constrained.ipynb  pyproject.toml  requirements.txt  run_opt_mbx_workflow_parallel.py  run_single_workflow_parallel.py  run_workflows_parallel.py
data/: README.md
data_dependencies/: Heinken_2019_BA_diet.csv  README.md
example_data/: README.md  metabolomic_data_with_rel_timepoints.csv  metabolomics_data.csv  metabolomics_data_assert_non_large_value.csv
example_outputs/: Case_1_max_mbx_opt_flux.txt  Case_1_metabolomics_data_assert_non_large_value_matched_key.txt  Case_1_metabolomics_data_matched_key.txt  Case_1_min_mbx_opt_flux.txt  Case_1_opt_FEX_flux.txt  Case_1_opt_flux.txt  Control_10_max_mbx_opt_flux.txt  Control_10_metabolomics_data_assert_non_large_value_matched_key.txt  Control_10_metabolomics_data_matched_key.txt  Control_10_min_mbx_opt_flux.txt  Control_10_opt_flux.txt  metabolomics_data_matched_key.txt  optimized_mbx_model_results.txt
optimize/: essential_metabolites.py  optimization_workflows.py  run_single_workflow_parallel.py  run_workflows_parallel.py  solve_infeasible_model.py  utils.py
requirements/: ci.txt  dev.txt
src/: __init__.py  fetch_diet.py  optimize.py  (+5 more)
(+53 files in other folders)
